samples/_failures_safe/1761144173_255110_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7dbe72d4.c: In function ‘main’:
./samples/SAFE/__tmp_7dbe72d4.c:156:5: error: expected expression at end of input
  156 |     if (a < 0 || b <
      |     ^~
./samples/SAFE/__tmp_7dbe72d4.c:156:5: error: expected declaration or statement at end of input
